# Space-Miner-Bevy

./: .gitignore  Cargo.toml  README.md  win.sh
src/: assets.rs  controller.rs  entities.rs  gameui.rs  main.rs  movement.rs  utils.rs
src/entities/: asteroid.rs  collisions.rs  lives.rs  meteor.rs  spaceship.rs
src/gameui/: button.rs  menu.rs  settings.rs
src/ui/: button.rs  menu.rs
src/utils/: asset_loader.rs  kenney_asset.rs  pause_system.rs
