[package]
name = "space_miner"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
rand = "0.8.5"
bevy_asset_loader = { version = "0.20", features = ["2d"] }
bevy_xpbd_2d = { version = "0.4.2", features = ["debug-plugin"] }
roxmltree = "0.19.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3